# guile-plotutils

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac
.github/workflows/: deploy-docs.yml  macos-10.15.yml  macos-11.yml  macos-12.yml  macos-26.yml  mingw-guile-3.0.yml  release.yml  ubuntu-20-04.yml  ubuntu-22-04.yml  ubuntu-24-04.yml  ubuntu-bionic-guile-2.2.yml  ubuntu-focal-guile-3.0.yml  windows-2022.yml  windows.yml
docs/: Makefile.am  colors.txt  ex-graph-bessel.scm  ex-graph-chebyshev.scm  ex-graph-damped-oscillator.scm  ex-graph-elliptic-integral.scm  ex-graph-fourier.scm  ex-graph-fresnel.scm  ex-graph-gamma.scm  ex-graph-gaussian.scm  ex-graph-lissajous.scm  ex-graph-logistic-growth.scm  ex-graph-logistic.scm  ex-graph-riemann-stairs.scm  ex-graph-weierstrass.scm  ex-graph-zeta.scm  ex-plot-curve.scm.in  ex-plot-dragon-curve.scm  ex-plot-gaussian-histogram.scm  ex-plot-golden-spiral.scm  ex-plot-hilbert-curve.scm  ex-plot-koch-snowflake.scm  ex-plot-sierpinski-triangle.scm  ex-plot-spirograph.scm  ex-sine-wave.scm.in  ex-sine-wave2.scm.in  guile-plotutils.texi
docs/images/: graph-bessel.eps  graph-chebyshev.eps  graph-damped-oscillator.eps  graph-elliptic-integral.eps  graph-fourier.eps  graph-fresnel.eps  graph-gamma.eps  graph-gaussian.eps  graph-lissajous.eps  graph-logistic-growth.eps  graph-riemann-stairs.eps  graph-sine-wave.eps  graph-sine-wave2.eps  graph-weierstrass.eps  graph-zeta.eps
docs/scripts/: graph-bessel.scm  graph-chebyshev.scm  graph-damped-oscillator.scm  graph-elliptic-integral.scm  graph-fourier.scm  graph-fresnel.scm  graph-gamma.scm  graph-gaussian.scm  graph-lissajous.scm  graph-logistic-growth.scm  graph-logistic.scm  graph-riemann-stairs.scm  graph-sine-wave.scm  graph-sine-wave2.scm  graph-weierstrass.scm  graph-zeta.scm  plot-dragon-curve.scm  plot-gaussian-histogram.scm  plot-golden-spiral.scm  plot-hilbert-curve.scm  plot-koch-snowflake.scm  plot-sierpinski-triangle.scm  plot-spirograph.scm
double/: Makefile.am
examples/: ex-graph2.scm  ex-plot-face.scm  ex-plot1.scm  ex-plot2.scm
graph/: Makefile.am  plotter.c
guile/: Makefile.am  ex-graph.scm  ex-plot1.scm  ex-plot2.scm  graph.scm  guile_graph.c  guile_graph.h  guile_plot.c  guile_plot.h  plot.scm  visibility.h
hersheydemo/: Makefile.am
include/: sys-defines.h
lib/: Makefile.am  xmalloc.c
libplot/: Makefile.am  z_write.c
libplotter/: Makefile.am
m4/: Makefile.am  guile.m4
module/plotutils/: Makefile.am  ex-plot3.scm  graph.scm
ode/: Makefile.am  extern.h  float.c
pic2plot/: Makefile.am
pic2plot/libgroff/: Makefile.am
plot/: Makefile.am
plotfont/: Makefile.am
spline/: Makefile.am
src/: Makefile.am  README  compat.c  config.h.in  display.c  extern.h  fontlist.c  fontlist.h  getopt.h  getopt1.c  guile_graph.c  guile_graph.h  guile_plot.c  guile_plot.h  libcommon.h  linemode.c  misc.c  plot.h  plotter.c  reader.c  sys-defines.h  visibility.h  xmalloc.c  xstrdup.c
tek2plot/: Makefile.am
test/: _setup.scm  graph.scm  plot.scm
tools/: gdb-guile.in  gdb-test.in  run-guile.in  uninstalled-test-env.in
